[tool.poetry]
name = "chronologify"
version = "0.1.0"
description = ""
authors = ["Dawn James <dawnjames2105@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
